--- a/package.json
+++ b/package.json
@@ -20,16 +20,17 @@
   },
   "homepage": "https://github.com/Shantanu-traffic/Just-cake-portal#readme",
   "dependencies": {
-    "express": "^4.21.0"
+    "cookie-session": "^2.1.0",
+    "express": "^4.21.0",
+    "express-session": "^1.18.0",
+    "passport": "^0.5.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "express-session": "^1.18.0",
     "google-auth-library": "^9.14.1",
-    "passport": "^0.7.0",
+    "nodemon": "^3.1.7",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.0"
   }
