--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "cookie-session": "^2.1.0",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
-    "passport": "^0.5.3"
+    "passport": "^0.5.3",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "google-auth-library": "^9.14.1",
+    "nodemon": "^3.1.7",
     "nodemon": "^3.1.7",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.0"
