--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "homepage": "https://github.com/Shantanu-traffic/Just-cake-portal#readme",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cookie-session": "^2.1.0",
-    "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "firebase": "^10.13.2",
+    "firebase-admin": "^12.5.0",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.5.3",
     "stripe": "^16.12.0"
   },
@@ -31,7 +34,6 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "google-auth-library": "^9.14.1",
-    "nodemon": "^3.1.7",
     "nodemon": "^3.1.7",
     "passport-google-oauth20": "^2.0.0",
     "pg": "^8.13.0"
