--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase": "^10.13.2",
     "firebase-admin": "^12.5.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.15",
     "passport": "^0.5.3",
     "stripe": "^16.12.0"
   },
